# cp19

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Info.plist  Jenkinsfile  README.md  build.sh  local.properties  main.c
.devcontainer/: Dockerfile  Dockerfile.amd64  Dockerfile.android  devcontainer.json
android/: build-apk.sh
android/jni/SDL/: Android.mk
android/jni/src/: Android.mk
desktop/: CMakeLists.txt  External_SDL2.cmake  cp19.nix  run.sh
ios/nativesdldemo.xcodeproj/: project.pbxproj
ios/nativesdldemo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/nativesdlstarterkit.xcodeproj/: project.pbxproj
ios/nativesdlstarterkit.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
jni/: SDL
native/: CMakeLists.txt
nativesdlstarterkit.xcodeproj/: project.pbxproj
net/: CMakeLists.txt  client.cpp  interplay.cpp  interplay.hpp  server.cpp
sdlstarterproject.xcodeproj/: project.pbxproj
sdlstarterproject.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/: animation.cpp  animation.hpp  constants.hpp  fragment_shader.h  gameworld.cpp  gameworld.hpp  generator_maze2d.cpp  generator_shape.cpp  generator_shape.hpp  group.hpp  helpers.cpp  helpers.hpp  main.cpp  maze.cpp  maze.h  maze2d.cpp  maze2d.hpp  missile.cpp  missile.hpp  n_fragment.glsl  n_vertex.glsl  object.cpp  object.hpp  object_gun.cpp  object_gun.hpp  object_missile.cpp  object_missile.hpp  object_player.cpp  object_player.hpp  object_wall.cpp  object_wall.hpp  objectmissile.cpp  objectmissile.hpp  objectplayer.cpp  objectplayer.hpp  objectwall.cpp  objectwall.hpp  p.hpp  physics.cpp  physics.hpp  (+32 more)
src/helpers/: maze2d.cpp  maze2d.hpp  misc.hpp  shapegenerator.cpp  shapegenerator.hpp
tests/: CMakeLists.txt  main.cpp  test_p.cpp  test_point.cpp  test_tribool.cpp  test_v.cpp  test_vec.cpp  tests.pro
tools/: build.sh  cppcheck.sh  embedfile.cpp  embedfile.py  pylint.sh  shellcheck.sh
